Accept session names of "s= " in SDP.

RFC4566 says to use this if a session has no meaningful name. But we
were rejecting it due to another rule that says "whitespace MUST NOT be
used on either side of the = sign".

Bug: chromium:590625
Change-Id: I5d632f2cb371060adee794febe19bdfe76cb20ed
Reviewed-on: https://webrtc-review.googlesource.com/70262
Reviewed-by: Steve Anton <steveanton@webrtc.org>
Commit-Queue: Taylor Brandstetter <deadbeef@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#22887}